fix: New text button text wrap

--- a/frontend/packages/text-editor/src/TextEditor.module.css
+++ b/frontend/packages/text-editor/src/TextEditor.module.css
@@ -33,13 +33,14 @@
   align-items: flex-end;
   gap: var(--fds-spacing-4);
   justify-content: flex-end;
-  width: 100%;
+  /*width: 100%;*/
 }
 
 .sortAlphabetically {
   gap: var(--fds-spacing-4);
   display: flex;
   align-items: center;
+  text-wrap: nowrap;
 }
 
 .textEditorBody {
